# TA_Reviews

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: dependencies.py
app/api/v1/: __init__.py  reviews.py
app/core/: __init__.py  database.py  exceptions.py
app/data/: __init__.py  training_data.py
app/ml/: __init__.py  sentiment_model.joblib  sentiment_model.py
app/models/: __init__.py  database.py  schemas.py
app/repositories/: review_repository.py
app/services/: review_service.py  sentiment_service.py
docs/: Technical_specification.md
docs/images/: .gitkeep
scripts/: start.bat  start.py  start.sh
